testsuite/tests/typecheck/should_fail/tcfail224.hs
module Foo where

import Prelude hiding( Int )

data Int = Int

f :: Int
f = 3
